--- a/lichkin-ui/src/main/resources/META-INF/resources/webjars/LichKin-UI/1.0.0/plugins/lichkin-plugin-text.css
+++ b/lichkin-ui/src/main/resources/META-INF/resources/webjars/LichKin-UI/1.0.0/plugins/lichkin-plugin-text.css
@@ -1,6 +1,7 @@
 @charset "UTF-8";
 
 .lichkin-text {
+  font-size: var(--lichkin-plugin-font-size);
   display: inline-block;
   vertical-align: middle;
   color: var(--lichkin-plugin-font-color);
