--- a/lichkin-ui/src/main/resources/META-INF/resources/webjars/LichKin-UI/1.0.0/themes/default/lichkin-web.css
+++ b/lichkin-ui/src/main/resources/META-INF/resources/webjars/LichKin-UI/1.0.0/themes/default/lichkin-web.css
@@ -2,12 +2,11 @@
 
 :root {
   --lichkin-body-background-color: #ffffff;
-  --lichkin-font-color: #2e6da4;
-  --lichkin-font-size: 12px;
 
   --lichkin-plugin-border-color: #2e6da4;
   --lichkin-plugin-background-color: #ffffff;
   --lichkin-plugin-font-color: #2e6da4;
+  --lichkin-plugin-font-size: 12px;
 
   --lichkin-plugin-border-color-selected: #ffffff;
   --lichkin-plugin-background-color-selected: #2e6da4;
@@ -60,14 +59,13 @@ TABLE.lichkin-table .lichkin-table .lichkin-table-row .lichkin-table-cell:last-c
 
 /** plugin */
 .lichkin-plugin {position:relative;vertical-align:top;display:inline-block;border:1px solid var(--lichkin-plugin-border-color);background-color:var(--lichkin-plugin-background-color);}
-.lichkin-plugin .lichkin-plugin-text {overflow:auto;border:none;padding:0px 6px;color:var(--lichkin-plugin-font-color);}
+.lichkin-plugin .lichkin-plugin-text {overflow:auto;border:none;padding:0px 6px;color:var(--lichkin-plugin-font-color);font-size:var(--lichkin-plugin-font-size);}
 .lichkin-plugin .lichkin-plugin-button {pointer-events:none;border:none;position:absolute;right:0px;top:0px;background-color:var(--lichkin-plugin-background-color);}
 .lichkin-plugin .lichkin-plugin-button .lichkin-icon {top:2px;}
 .lichkin-plugin .lichkin-plugin-button .lichkin-icon i {color:var(--lichkin-plugin-font-color);}
 .lichkin-plugin .lichkin-plugin-popup {display:none;position:absolute;overflow:auto;left:-1px;z-index:99999;border:1px solid var(--lichkin-plugin-border-color);border-top:none;background-color:var(--lichkin-plugin-background-color);}
 .lichkin-plugin .lichkin-plugin-popup ul {list-style:none;padding:0px;margin:0px;}
 .lichkin-plugin .lichkin-plugin-popup ul li {overflow:hidden;cursor:pointer;border-bottom-width:1px;border-bottom-style:dotted;background-color:var(--lichkin-plugin-background-color);border-color:var(--lichkin-plugin-border-color);}
-.lichkin-plugin .lichkin-plugin-popup ul li .lichkin-text {color:var(--lichkin-plugin-font-color);}
 
 .lichkin-plugin .lichkin-plugin-popup ul li.selected {background-color:var(--lichkin-plugin-background-color-selected);border-color:var(--lichkin-plugin-border-color-selected);}
 .lichkin-plugin .lichkin-plugin-popup ul li.selected .lichkin-text {color:var(--lichkin-plugin-font-color-selected);}
