--- a/lichkin-ui/src/main/resources/META-INF/resources/webjars/LichKin-UI/1.0.0/plugins/lichkin-plugin-dialog.css
+++ b/lichkin-ui/src/main/resources/META-INF/resources/webjars/LichKin-UI/1.0.0/plugins/lichkin-plugin-dialog.css
@@ -38,6 +38,8 @@
   left: 6px;
   color: var(--lichkin-dialog-font-color);
   font-size: 16px;
+  height: 28px;
+  line-height: 28px;
 }
 
 .lichkin-dialog .lichkin-dialog-titleBar>.lichkin-icon+.lichkin-title {
