--- a/lichkin-ui/src/main/resources/META-INF/resources/webjars/LichKin-UI/1.0.0/plugins/lichkin-plugin-ueditor.css
+++ b/lichkin-ui/src/main/resources/META-INF/resources/webjars/LichKin-UI/1.0.0/plugins/lichkin-plugin-ueditor.css
@@ -8,6 +8,22 @@
   border-color:var(--lichkin-plugin-border-color);
 }
 
+.lichkin-ueditor .edui-default .edui-editor-bottomContainer td .edui-editor-breadcrumb {
+  color:var(--lichkin-plugin-font-color);
+}
+
 .lichkin-ueditor .edui-default .edui-editor-toolbarboxouter {
   border-radius: 0px;
+}
+
+.lichkin-ueditor-invalid .edui-default .edui-editor-bottomContainer td {
+  border-color:var(--lichkin-plugin-border-color-invalid);
+}
+
+.lichkin-ueditor-invalid .edui-default .edui-editor-bottomContainer td .edui-editor-breadcrumb {
+  color:var(--lichkin-plugin-font-color-invalid);
+}
+
+.lichkin-ueditor-invalid .edui-default .edui-editor-iframeholder {
+  background-color:var(--lichkin-plugin-background-color-invalid);
 }
