公用样式取消选择框鼠标事件，droplist、datepicker单独做样式处理。

--- a/lichkin-ui/src/main/resources/META-INF/resources/webjars/LichKin-UI/1.0.0/plugins/lichkin-plugin-datepicker.css
+++ b/lichkin-ui/src/main/resources/META-INF/resources/webjars/LichKin-UI/1.0.0/plugins/lichkin-plugin-datepicker.css
@@ -5,6 +5,10 @@
   cursor: pointer;
 }
 
+.lichkin-datepicker .lichkin-datepicker-button {
+  pointer-events:none;
+}
+
 .lichkin-datepicker .lichkin-datepicker-text:focus {
   outline: none;
 }
