--- a/lichkin-ui/src/main/resources/META-INF/resources/webjars/LichKin-UI/1.0.0/plugins/lichkin-plugin-droplist.css
+++ b/lichkin-ui/src/main/resources/META-INF/resources/webjars/LichKin-UI/1.0.0/plugins/lichkin-plugin-droplist.css
@@ -3,3 +3,7 @@
 .lichkin-droplist .lichkin-droplist-wrapper {
   cursor: pointer;
 }
+
+.lichkin-droplist .lichkin-droplist-button {
+  pointer-events:none;
+}
