--- a/lichkin-ui/src/main/resources/META-INF/resources/webjars/LichKin-UI/1.0.0/themes/default/lichkin-web.css
+++ b/lichkin-ui/src/main/resources/META-INF/resources/webjars/LichKin-UI/1.0.0/themes/default/lichkin-web.css
@@ -9,16 +9,16 @@
   --lichkin-plugin-font-size: 12px;
 
   --lichkin-plugin-border-color-selected: #ffffff;
-  --lichkin-plugin-background-color-selected: #2e6da4;
-  --lichkin-plugin-font-color-selected: #ffffff;
+  --lichkin-plugin-background-color-selected: #c0daef;
+  --lichkin-plugin-font-color-selected: #000033;
 
   --lichkin-plugin-border-color-hover: #2e6da4;
-  --lichkin-plugin-background-color-hover: #eea236;
-  --lichkin-plugin-font-color-hover: #ffffff;
+  --lichkin-plugin-background-color-hover: #fbe4bf;
+  --lichkin-plugin-font-color-hover: #000033;
 
   --lichkin-plugin-border-color-selected-hover: #2e6da4;
-  --lichkin-plugin-background-color-selected-hover: #4cae4c;
-  --lichkin-plugin-font-color-selected-hover: #ffffff;
+  --lichkin-plugin-background-color-selected-hover: #d9eed9;
+  --lichkin-plugin-font-color-selected-hover: #000033;
 
   --lichkin-plugin-border-color-invalid: #d43f3a;
   --lichkin-plugin-background-color-invalid: #ffe6e6;
@@ -39,7 +39,7 @@ DIV.lichkin-div-danger  {color:#ffffff;background-color:#d9534f;border-color:#d4
 IMG.lichkin-img {vertical-align:middle;}
 
 /** table */
-TABLE.lichkin-table, .lichkin-table th, .lichkin-table td {border-width:1px;border-style:solid;border-color:#2e6da4;padding:0px;}
+TABLE.lichkin-table, .lichkin-table th, .lichkin-table td {border-width:1px;border-style:solid;border-color:var(--lichkin-plugin-border-color);padding:0px;}
 TABLE.lichkin-table {text-align:center;border-collapse:collapse;}
 TABLE.lichkin-table .lichkin-table {width:100%;border:none;}
 TABLE.lichkin-table .lichkin-table .lichkin-table-row .lichkin-table-cell:first-child {border-left:none;}
@@ -63,23 +63,42 @@ TABLE.lichkin-table .lichkin-table .lichkin-table-row .lichkin-table-cell:last-c
 .lichkin-plugin .lichkin-plugin-button {border:none;position:absolute;right:0px;top:0px;background-color:var(--lichkin-plugin-background-color);}
 .lichkin-plugin .lichkin-plugin-button .lichkin-icon {top:2px;}
 .lichkin-plugin .lichkin-plugin-button .lichkin-icon i {color:var(--lichkin-plugin-font-color);}
-.lichkin-plugin-popup {display:none;position:absolute;overflow:auto;left:-1px;z-index:99999;border:1px solid var(--lichkin-plugin-border-color);border-top:none;background-color:var(--lichkin-plugin-background-color);}
-.lichkin-plugin-popup ul {list-style:none;padding:0px;margin:0px;}
-.lichkin-plugin-popup ul li {overflow:hidden;cursor:pointer;border-bottom-width:1px;border-bottom-style:dotted;background-color:var(--lichkin-plugin-background-color);border-color:var(--lichkin-plugin-border-color);}
 
-.lichkin-plugin-popup ul li.selected {background-color:var(--lichkin-plugin-background-color-selected);border-color:var(--lichkin-plugin-border-color-selected);}
-.lichkin-plugin-popup ul li.selected .lichkin-text {color:var(--lichkin-plugin-font-color-selected);}
+.lichkin-plugin .lichkin-plugin-dataContainer {list-style:none;padding:0px;margin:0px;}
+.lichkin-plugin .lichkin-plugin-dataContainer .lichkin-plugin-node {overflow:hidden;cursor:pointer;border-bottom-width:1px;border-bottom-style:dotted;background-color:var(--lichkin-plugin-background-color);border-color:var(--lichkin-plugin-border-color);}
 
-.lichkin-plugin-popup ul li:hover {background-color:var(--lichkin-plugin-background-color-hover);border-color:var(--lichkin-plugin-border-color-hover);}
-.lichkin-plugin-popup ul li:hover .lichkin-text {color:var(--lichkin-plugin-font-color-hover);}
+.lichkin-plugin .lichkin-plugin-dataContainer .lichkin-plugin-node.selected {background-color:var(--lichkin-plugin-background-color-selected);border-color:var(--lichkin-plugin-border-color-selected);}
+.lichkin-plugin .lichkin-plugin-dataContainer .lichkin-plugin-node.selected .lichkin-text {color:var(--lichkin-plugin-font-color-selected);}
 
-.lichkin-plugin-popup ul li.selected:hover {background-color:var(--lichkin-plugin-background-color-selected-hover);border-color:var(--lichkin-plugin-border-color-selected-hover);}
-.lichkin-plugin-popup ul li.selected:hover .lichkin-text {color:var(--lichkin-plugin-font-color-selected-hover);}
+.lichkin-plugin .lichkin-plugin-dataContainer .lichkin-plugin-node:hover {background-color:var(--lichkin-plugin-background-color-hover);border-color:var(--lichkin-plugin-border-color-hover);}
+.lichkin-plugin .lichkin-plugin-dataContainer .lichkin-plugin-node:hover .lichkin-text {color:var(--lichkin-plugin-font-color-hover);}
+
+.lichkin-plugin .lichkin-plugin-dataContainer .lichkin-plugin-node.selected:hover {background-color:var(--lichkin-plugin-background-color-selected-hover);border-color:var(--lichkin-plugin-border-color-selected-hover);}
+.lichkin-plugin .lichkin-plugin-dataContainer .lichkin-plugin-node.selected:hover .lichkin-text {color:var(--lichkin-plugin-font-color-selected-hover);}
 
 .lichkin-plugin-invalid {border:1px solid var(--lichkin-plugin-border-color-invalid);background-color:var(--lichkin-plugin-background-color-invalid);}
 .lichkin-plugin-invalid .lichkin-plugin-text {color:var(--lichkin-plugin-font-color-invalid);background-color:var(--lichkin-plugin-background-color-invalid);}
 .lichkin-plugin-invalid .lichkin-plugin-button {background-color:var(--lichkin-plugin-background-color-invalid);}
 .lichkin-plugin-invalid .lichkin-plugin-button .lichkin-icon i {color:var(--lichkin-plugin-font-color-invalid);}
+
+.lichkin-plugin-invalid .lichkin-plugin-dataContainer .lichkin-plugin-node {background-color:var(--lichkin-plugin-background-color-invalid);border-color:var(--lichkin-plugin-border-color-invalid);}
+.lichkin-plugin-invalid .lichkin-plugin-dataContainer .lichkin-plugin-node .lichkin-text {color:var(--lichkin-plugin-font-color-invalid);}
+
+/** plugin popup */
+.lichkin-plugin-popup {display:none;position:absolute;overflow:auto;left:-1px;z-index:99999;border:1px solid var(--lichkin-plugin-border-color);border-top:none;background-color:var(--lichkin-plugin-background-color);}
 .lichkin-plugin-popup-invalid {border-color:var(--lichkin-plugin-border-color-invalid);background-color:var(--lichkin-plugin-background-color-invalid);}
-.lichkin-plugin-popup-invalid ul li {background-color:var(--lichkin-plugin-background-color-invalid);border-color:var(--lichkin-plugin-border-color-invalid);}
-.lichkin-plugin-popup-invalid ul li .lichkin-text {color:var(--lichkin-plugin-font-color-invalid);}
+
+.lichkin-plugin-popup .lichkin-plugin-dataContainer {list-style:none;padding:0px;margin:0px;}
+.lichkin-plugin-popup .lichkin-plugin-dataContainer .lichkin-plugin-node {overflow:hidden;cursor:pointer;border-bottom-width:1px;border-bottom-style:dotted;background-color:var(--lichkin-plugin-background-color);border-color:var(--lichkin-plugin-border-color);}
+
+.lichkin-plugin-popup .lichkin-plugin-dataContainer .lichkin-plugin-node.selected {background-color:var(--lichkin-plugin-background-color-selected);border-color:var(--lichkin-plugin-border-color-selected);}
+.lichkin-plugin-popup .lichkin-plugin-dataContainer .lichkin-plugin-node.selected .lichkin-text {color:var(--lichkin-plugin-font-color-selected);}
+
+.lichkin-plugin-popup .lichkin-plugin-dataContainer .lichkin-plugin-node:hover {background-color:var(--lichkin-plugin-background-color-hover);border-color:var(--lichkin-plugin-border-color-hover);}
+.lichkin-plugin-popup .lichkin-plugin-dataContainer .lichkin-plugin-node:hover .lichkin-text {color:var(--lichkin-plugin-font-color-hover);}
+
+.lichkin-plugin-popup .lichkin-plugin-dataContainer .lichkin-plugin-node.selected:hover {background-color:var(--lichkin-plugin-background-color-selected-hover);border-color:var(--lichkin-plugin-border-color-selected-hover);}
+.lichkin-plugin-popup .lichkin-plugin-dataContainer .lichkin-plugin-node.selected:hover .lichkin-text {color:var(--lichkin-plugin-font-color-selected-hover);}
+
+.lichkin-plugin-popup-invalid .lichkin-plugin-dataContainer .lichkin-plugin-node {background-color:var(--lichkin-plugin-background-color-invalid);border-color:var(--lichkin-plugin-border-color-invalid);}
+.lichkin-plugin-popup-invalid .lichkin-plugin-dataContainer .lichkin-plugin-node .lichkin-text {color:var(--lichkin-plugin-font-color-invalid);}
