--- a/lichkin-ui/src/main/resources/META-INF/resources/webjars/LichKin-UI/1.0.0/plugins/lichkin-plugin-datagrid.css
+++ b/lichkin-ui/src/main/resources/META-INF/resources/webjars/LichKin-UI/1.0.0/plugins/lichkin-plugin-datagrid.css
@@ -1,6 +1,7 @@
 @charset "UTF-8";
 
 :root {
+  --lichkin-datagrid-title-font-size: 16px;
   --lichkin-datagrid-header-background-color: var(--lichkin-plugin-border-color);
   --lichkin-datagrid-header-border-color: #FFFFFF;
   --lichkin-datagrid-header-font-color: var(--lichkin-plugin-background-color);
@@ -15,6 +16,42 @@
   background-color: transparent;
   overflow-x: auto;
   overflow-y: hidden;
+}
+
+.lichkin-datagrid .lichkin-datagrid-titleBar {
+  position: relative;
+  padding: 3px 0px;
+  height: 30px;
+  line-height: 30px;
+  background-color: var(--lichkin-plugin-border-color);
+  border-top: 1px solid var(--lichkin-plugin-border-color);
+  border-right: 1px solid var(--lichkin-plugin-border-color);
+  border-bottom: 1px solid var(--lichkin-datagrid-header-border-color);
+  border-left: 1px solid var(--lichkin-plugin-border-color);
+}
+
+.lichkin-datagrid .lichkin-datagrid-titleBar>.lichkin-icon {
+  position: absolute;
+  left: 6px;
+  top: 6px;
+}
+
+.lichkin-datagrid .lichkin-datagrid-titleBar .lichkin-icon i {
+  color: var(--lichkin-plugin-background-color);
+}
+
+.lichkin-datagrid .lichkin-datagrid-titleBar .lichkin-text {
+  position: absolute;
+  left: 6px;
+  top: 0px;
+  height: 29px;
+  line-height: 29px;
+  color: var(--lichkin-plugin-background-color);
+  font-size: var(--lichkin-datagrid-title-font-size);
+}
+
+.lichkin-datagrid .lichkin-datagrid-titleBar>.lichkin-icon+.lichkin-text {
+  left: 27px;
 }
 
 .lichkin-datagrid .lichkin-datagrid-dataBar {
