样式细节调整

--- a/lichkin-ui/src/main/resources/META-INF/resources/webjars/LichKin-UI/1.0.0/plugins/lichkin-plugin-datagrid.css
+++ b/lichkin-ui/src/main/resources/META-INF/resources/webjars/LichKin-UI/1.0.0/plugins/lichkin-plugin-datagrid.css
@@ -97,6 +97,10 @@
   border-left: 1px solid var(--lichkin-plugin-border-color);
 }
 
+.lichkin-datagrid .lichkin-datagrid-toolsBar .lichkin-buttons {
+  text-align: left;
+}
+
 .lichkin-datagrid .lichkin-datagrid-toolsBar .lichkin-buttons .lichkin-button {
   background-color: transparent;
   border-color: transparent;
