--- a/lichkin-ui/src/main/resources/META-INF/resources/webjars/LichKin-UI/1.0.0/plugins/lichkin-plugin-button.css
+++ b/lichkin-ui/src/main/resources/META-INF/resources/webjars/LichKin-UI/1.0.0/plugins/lichkin-plugin-button.css
@@ -13,7 +13,6 @@
   cursor: pointer;
   background-color: var(--lichkin-button-background-color);
   border: 1px solid var(--lichkin-button-border-color);
-  height: 28px;
   vertical-align: middle;
   overflow: hidden;
 }
@@ -36,19 +35,17 @@
   height: 100%;
 }
 
+.lichkin-button .lichkin-button-container .lichkin-text {
+  margin-top: -1px;
+}
+
 .lichkin-button .lichkin-button-container .lichkin-icon-16 {
   margin: 6px;
 }
 
-.lichkin-button .lichkin-button-container .lichkin-text {
-  height: 28px;
-  line-height: 28px;
-  padding: 0px 6px;
-}
-
 .lichkin-button .lichkin-button-container .lichkin-icon-16+.lichkin-text {
-  margin-top: -21px;
-  padding-left: 0px;
+  margin-top: -19px;
+  margin-left: -10px;
 }
 
 .lichkin-button-default {color:#ffffff;background-color:#ffffff;border-color:#cccccc;}
