--- a/lichkin-ui/src/main/resources/META-INF/resources/webjars/LichKin-UI/1.0.0/themes/default/lichkin-web.css
+++ b/lichkin-ui/src/main/resources/META-INF/resources/webjars/LichKin-UI/1.0.0/themes/default/lichkin-web.css
@@ -82,6 +82,7 @@ TABLE.lichkin-table .lichkin-table .lichkin-table-row .lichkin-table-cell:last-c
 .lichkin-plugin-invalid .lichkin-plugin-button .lichkin-icon i {color:var(--lichkin-plugin-font-color-invalid);}
 
 .lichkin-plugin-invalid .lichkin-plugin-dataContainer .lichkin-plugin-node {background-color:var(--lichkin-plugin-background-color-invalid);border-color:var(--lichkin-plugin-border-color-invalid);}
+.lichkin-plugin-invalid .lichkin-plugin-dataContainer .lichkin-plugin-node .lichkin-icon i {color:var(--lichkin-plugin-font-color-invalid);}
 .lichkin-plugin-invalid .lichkin-plugin-dataContainer .lichkin-plugin-node .lichkin-text {color:var(--lichkin-plugin-font-color-invalid);}
 
 /** plugin popup */
