--- a/lichkin-ui/src/main/resources/META-INF/resources/webjars/LichKin-UI/1.0.0/plugins/lichkin-plugin-text.css
+++ b/lichkin-ui/src/main/resources/META-INF/resources/webjars/LichKin-UI/1.0.0/plugins/lichkin-plugin-text.css
@@ -6,3 +6,7 @@
   vertical-align: middle;
   color: var(--lichkin-plugin-font-color);
 }
+
+.lichkin-plugin-invalid .lichkin-text {
+  color: var(--lichkin-plugin-font-color-invalid);
+}
