--- a/lichkin-ui/src/main/resources/META-INF/resources/webjars/LichKin-UI/1.0.0/plugins/lichkin-plugin-form.css
+++ b/lichkin-ui/src/main/resources/META-INF/resources/webjars/LichKin-UI/1.0.0/plugins/lichkin-plugin-form.css
@@ -14,3 +14,7 @@
   float: left;
   display: inline-block;
 }
+
+.lichkin-form-field-invalid .lichkin-form-field-key .lichkin-text {
+  color: var(--lichkin-plugin-font-color-invalid);
+}
