已有控件功能完善

--- a/lichkin-ui/src/main/resources/META-INF/resources/webjars/LichKin-UI/1.0.0/plugins/lichkin-plugin-form.css
+++ b/lichkin-ui/src/main/resources/META-INF/resources/webjars/LichKin-UI/1.0.0/plugins/lichkin-plugin-form.css
@@ -18,3 +18,8 @@
 .lichkin-form-field-invalid .lichkin-form-field-key .lichkin-text {
   color: var(--lichkin-plugin-font-color-invalid);
 }
+
+.lichkin-form-field .lichkin-form-field-value .lichkin-plugin .lichkin-plugin-titleBar {
+  border-right: none;
+  border-left: none;
+}
