--- a/lichkin-ui/src/main/resources/META-INF/resources/webjars/LichKin-UI/1.0.0/plugins/lichkin-plugin-datagrid.css
+++ b/lichkin-ui/src/main/resources/META-INF/resources/webjars/LichKin-UI/1.0.0/plugins/lichkin-plugin-datagrid.css
@@ -97,6 +97,7 @@
   color: var(--lichkin-datagrid-body-font-color);
   font-size: var(--lichkin-datagrid-body-font-size);
   padding: 6px;
+  overflow: hidden;
 }
 
 .lichkin-datagrid .lichkin-datagrid-pageBar {
