--- a/lichkin-timepicker/src/main/resources/META-INF/resources/webjars/timepicker/201800808/timePicker.css
+++ b/lichkin-timepicker/src/main/resources/META-INF/resources/webjars/timepicker/201800808/timePicker.css
@@ -1,125 +1,159 @@
-.Hunter-time-picker{
-	position: absolute;
-	border: 2px solid #c9cbce;
-	width: 390px;
-	background: #ffffff;
-	z-index: 999999;
-	font-size: 0;
-}
-.Hunter-time-picker:before, .Hunter-time-picker:after{
-	content: '';
-	display: block;
-	width: 0;
-	height: 0;
-	border-width: 10px;
-	border-style: solid;
-	position: absolute;
-	left: 20px;
-	z-index: 999999;
-}
-.Hunter-time-picker:before{
-	border-color: transparent transparent #ffffff;
-	top: -17px;
-	z-index: 9999999;
-}
-.Hunter-time-picker:after{
-	border-color: transparent transparent #c9cbce;
-	top: -20px;
-}
-.Hunter-time-picker *{
-	box-sizing: border-box;
-	margin: 0 auto;
-	padding: 0;
-	color: #666666;
-	font-family: "Microsoft YaHei";
-	font-size: 14px;
-}
-.Hunter-time-picker ul{
-	list-style: none;
-}
-.Hunter-time-picker ul li{
-	display: inline-block;
-	position: relative;
-	margin: 4px;
-	cursor: pointer;
-}
-.Hunter-time-picker p{
-	font-weight: bold;
-	padding: 0 4px;
-	margin-top: 4px;
-	margin-bottom: 10px;
-}
-.Hunter-time-picker .line{
-	width: 340px;
-	margin: 0 auto;
-	margin-top: 4px;
-	border-bottom: 1px solid #d8d8d8;
+.Hunter-time-picker {
+  border: 1px solid var(--lichkin-plugin-border-color);
+  background: var(--lichkin-plugin-background-color);
+  position: absolute;
+  width: 390px;
+  z-index: 999999;
+  font-size: 0;
 }
 
-/*选择小时*/
-.Hunter-time-picker .Hunter-wrap{
-	position: relative;
-	width: 100%;
-	background: #ffffff;
-	padding: 9px;
-}
-.Hunter-time-picker .Hunter-hour-name{
-	display: inline-block;
-	width: 50px;
-	height: 30px;
-	text-align: center;
-	line-height: 30px;
-	position: relative;
-	background-color: #f5f5f5;
-}
-.Hunter-time-picker .Hunter-hour-name:hover{
-	color: #002DFF;
+.Hunter-time-picker:before, .Hunter-time-picker:after {
+  border: 5px solid transparent;
+  border-top: 0;
+  content: " ";
+  display: block;
+  height: 0;
+  position: absolute;
+  width: 0;
+  left: 10px;
 }
 
-.Hunter-time-picker .Hunter-hour.active{
-	z-index: 999999999;
+.Hunter-time-picker:before {
+  top: -5px;
+  border-bottom-color: var(--lichkin-plugin-border-color);
 }
-.Hunter-time-picker .active .Hunter-hour-name{
-	color: #ffffff;
-	background-color: #3A7ADB;
+
+.Hunter-time-picker:after {
+  border-bottom-color: var(--lichkin-plugin-background-color);
+  top: -4px;
 }
-.Hunter-time-picker .Hunter-minute-wrap{
-	display: none;
-	border: 1px solid #D8D8D8;
-	background: #ffffff;
-	position: absolute;
-	top: 29px;
-	width: 370px;
-	padding: 10px 10px 5px 10px;
+
+.Hunter-time-picker * {
+  color: var(--lichkin-plugin-font-color);
+  box-sizing: border-box;
+  margin: 0 auto;
+  padding: 0;
+  font-family: "Microsoft YaHei";
+  font-size: 14px;
 }
-.Hunter-time-picker .Hunter-minute{
-	width: 50px;
-	height: 30px;
-	text-align: center;
-	line-height: 30px;
-	color: #999999;
-	background-color: #f5f5f5;
-	overflow: hidden;
-	white-space: nowrap;
-	text-overflow: ellipsis;
+
+.Hunter-time-picker ul {
+  list-style: none;
 }
-.Hunter-time-picker .Hunter-minute:hover{
-	color: #002DFF;
+
+.Hunter-time-picker ul li {
+  display: inline-block;
+  position: relative;
+  margin: 4px;
+  cursor: pointer;
 }
+
+.Hunter-time-picker p {
+  font-weight: bold;
+  padding: 0 4px;
+  margin-top: 4px;
+  margin-bottom: 10px;
+}
+
+.Hunter-time-picker .Hunter-wrap {
+  background-color: var(--lichkin-plugin-background-color);
+  color: var(--lichkin-plugin-font-color);
+  position: relative;
+  width: 100%;
+  padding: 9px;
+}
+
+.Hunter-time-picker .Hunter-hour-name {
+  border: 1px solid var(--lichkin-plugin-border-color);
+  background-color: var(--lichkin-plugin-background-color);
+  color: var(--lichkin-plugin-font-color);
+  display: inline-block;
+  width: 50px;
+  height: 30px;
+  text-align: center;
+  line-height: 30px;
+  position: relative;
+}
+
+.Hunter-time-picker .Hunter-hour-name:hover {
+  border-color: var(--lichkin-plugin-border-color-hover);
+  background-color: var(--lichkin-plugin-background-color-hover);
+  color: var(--lichkin-plugin-font-color-hover);
+}
+
+.Hunter-time-picker .Hunter-hour.active {
+  z-index: 999999999;
+}
+
+.Hunter-time-picker .active .Hunter-hour-name {
+  border-color: var(--lichkin-plugin-border-color-selected);
+  background-color: var(--lichkin-plugin-background-color-selected);
+  color: var(--lichkin-plugin-font-color-selected);
+}
+
+.Hunter-time-picker .active:hover .Hunter-hour-name {
+  border-color: var(--lichkin-plugin-border-color-selected-hover);
+  background-color: var(--lichkin-plugin-background-color-selected-hover);
+  color: var(--lichkin-plugin-font-color-selected-hover);
+}
+
+.Hunter-time-picker .Hunter-minute-wrap {
+  border: 1px solid var(--lichkin-plugin-border-color);
+  background-color: var(--lichkin-plugin-background-color);
+  color: var(--lichkin-plugin-font-color);
+  display: none;
+  position: absolute;
+  top: 30px;
+  width: 370px;
+  padding: 10px 10px 5px 10px;
+}
+
+.Hunter-time-picker .Hunter-minute {
+  border: 1px solid var(--lichkin-plugin-border-color);
+  background-color: var(--lichkin-plugin-background-color);
+  color: var(--lichkin-plugin-font-color);
+  width: 50px;
+  height: 30px;
+  text-align: center;
+  line-height: 30px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+.Hunter-time-picker .Hunter-minute:hover {
+  border-color: var(--lichkin-plugin-border-color-hover);
+  background-color: var(--lichkin-plugin-background-color-hover);
+  color: var(--lichkin-plugin-font-color-hover);
+}
+
 .Hunter-time-picker .Hunter-minute.active {
-	color: #ffffff;
-	background-color: #3A7ADB;
+  border-color: var(--lichkin-plugin-border-color-selected);
+  background-color: var(--lichkin-plugin-background-color-selected);
+  color: var(--lichkin-plugin-font-color-selected);
 }
-.Hunter-time-picker .Hunter-clean-btn{
-	width: 108px;
-	height: 30px;
-    background-color: #3A7ADB!important;
-    color: #ffffff;
-    background-image: none !important;
-    border: 5px solid #3A7ADB;
-    border-radius: 0;
+
+.Hunter-time-picker .Hunter-minute.active:hover {
+  border-color: var(--lichkin-plugin-border-color-selected-hover);
+  background-color: var(--lichkin-plugin-background-color-selected-hover);
+  color: var(--lichkin-plugin-font-color-selected-hover);
 }
-.Hunter-time-picker .Hunter-clean-btn:hover{
-	background-color: #0B4B94 !important;
-    border-color: #3A7ADB;
+
+.Hunter-time-picker .Hunter-clean-btn {
+  background-color: var(--lichkin-plugin-border-color);
+  color: var(--lichkin-plugin-background-color);
+  border: 5px solid var(--lichkin-plugin-border-color);
+  width: 108px;
+  height: 30px;
+  background-image: none !important;
+  border-radius: 0;
+  cursor: pointer;
+}
+
+.Hunter-clean {
+  top: 14px;
+}
+
+.Hunter-time-picker .Hunter-clean-btn:hover {
+  opacity: 0.6;
 }
