--- a/lichkin-ui-admin-login-1/src/main/resources/META-INF/resources/res/css/admin/index.css
+++ b/lichkin-ui-admin-login-1/src/main/resources/META-INF/resources/res/css/admin/index.css
@@ -24,6 +24,11 @@
   text-align: center;
 }
 
+.systemName {
+  text-align: center;
+  color: var(--lichkin-plugin-font-color);
+}
+
 .copyrightBox {
   padding: 30px 10px 10px 10px;
   text-align: center;
