--- a/lichkin-ui/src/main/resources/META-INF/resources/webjars/LichKin-UI/1.0.0/themes/default/lichkin-web.css
+++ b/lichkin-ui/src/main/resources/META-INF/resources/webjars/LichKin-UI/1.0.0/themes/default/lichkin-web.css
@@ -3,10 +3,19 @@
 :root {
   --lichkin-body-background-color: #ffffff;
 
+  --lichkin-plugin-font-size: 12px;
+
   --lichkin-plugin-border-color: #2e6da4;
   --lichkin-plugin-background-color: #ffffff;
-  --lichkin-plugin-font-color: #2e6da4;
-  --lichkin-plugin-font-size: 12px;
+  --lichkin-plugin-font-color: var(--lichkin-plugin-border-color);
+
+  --lichkin-plugin-light-border-color: #46b8da;
+  --lichkin-plugin-light-background-color: #ffffff;
+  --lichkin-plugin-light-font-color: var(--lichkin-plugin-light-border-color);
+
+  --lichkin-plugin-inverse-border-color: var(--lichkin-plugin-border-color);
+  --lichkin-plugin-inverse-background-color: var(--lichkin-plugin-border-color);
+  --lichkin-plugin-inverse-font-color: var(--lichkin-plugin-background-color);
 
   --lichkin-plugin-border-color-selected: #ffffff;
   --lichkin-plugin-background-color-selected: #c0daef;
