--- a/lichkin-ui/src/main/resources/META-INF/resources/webjars/LichKin-UI/1.0.0/plugins/lichkin-plugin-datagrid.css
+++ b/lichkin-ui/src/main/resources/META-INF/resources/webjars/LichKin-UI/1.0.0/plugins/lichkin-plugin-datagrid.css
@@ -52,6 +52,19 @@
   color: #ff9c9c;
 }
 
+.lichkin-datagrid .lichkin-datagrid-toolsBar .lichkin-buttons-right {
+  text-align: right;
+  float: right;
+}
+
+.lichkin-datagrid .lichkin-datagrid-toolsBar .lichkin-buttons-right .lichkin-button .lichkin-icon-reset i {
+  color: #ff7979;
+}
+
+.lichkin-datagrid .lichkin-datagrid-toolsBar .lichkin-buttons-right .lichkin-button .lichkin-icon-search i {
+  color: #fff45d;
+}
+
 .lichkin-datagrid .lichkin-datagrid-dataBar {
   background-color: var(--lichkin-plugin-background-color);
   border: 1px solid var(--lichkin-plugin-border-color);
